--- a/biomass/scripts/zumwalt_config.yaml
+++ b/biomass/scripts/zumwalt_config.yaml
@@ -30,17 +30,17 @@ models:
             minimum_area_ha: 1.8
 
 # shapefile containing pastures to analyze
-sf_fn:   C:\Users\roger\Documents\Zumwalt\vector_data\Pastures_ForageAreas_2018_AllZumClip.shp
+sf_fn: /geodata/rangesat/Zumwalt/vector_data/Pastures_ForageAreas_2018_AllZumClip.shp
 
 # primary key for pastures in shapefile
 # e.g. key = feature['properties'][sf_feature_properties_key]
 sf_feature_properties_key: PastID_Key
 
 # location to place cropped landsat scenes and biomass rasters
-out_dir: C:\Users\roger\Documents\Zumwalt\analyzed_rasters
+out_dir: /geodata/rangesat/Zumwalt/analyzed_rasters
 
 # directory containing extracted landsat scenes
-landsat_scene_directory: D:\Zumwalt\RS
+landsat_scene_directory: /geodata/torch-landsat
 
 # path rows that should be skipped
 wrs_blacklist: [042029]
